--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -144,11 +144,13 @@ background: linear-gradient(to right, #ACB6E5, #74ebd5);
   
   /* Modal Content/Box */
   .modal-content {
-    background-color: #fefefe;
+    background-color: #aaaaaa;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%; 
+    text-align: center;
+    font-size: large;
   }
   
   /* The Close Button */
@@ -165,3 +167,4 @@ background: linear-gradient(to right, #ACB6E5, #74ebd5);
     text-decoration: none;
     cursor: pointer;
   }
+ 
