--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,48 +1,58 @@
+/* Styling for the entire page body */
 body {
-font-family: 'Gentium Book Plus', serif;
-background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);  
-background: linear-gradient(to right, #ACB6E5, #74ebd5); 
-
+    font-family: 'Gentium Book Plus', serif;
+    background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);
+    background: linear-gradient(to right, #ACB6E5, #74ebd5);
 }
+
+/* Styling for the main heading */
 .heading {
     text-align: center;
     font-size: 2.5rem;
 }
+
+/* Styling for the game area container */
 .game-area {
     box-sizing: border-box;
     width: 85%;
-    
     max-width: 830px;
     margin-left: auto;
     margin-right: auto;
     padding: 1%;
     text-align: center;
-   
 }
+
+/* Styling for icon names */
 .icon-name {
     font-size: small;
     display: none;
 }
+
+/* Styling for the result area */
 .result-area {
     width: 50%;
     font-size: 2rem;
     margin: auto;
     padding: 50px 0;
     text-align: center;
-   
 }
+
+/* Styling for the score display area */
 .score-area {
     margin: 5px auto;
     width: 60%;
     font-size: 1.2rem;
     text-align: center;
-   
 }
+
+/* Styling for the game controls area */
 .controls-area {
     width: 85%;
     margin: 30px auto;
     display: inline-block;
 }
+
+/* Styling for game buttons */
 .btn {
     width: 220px;
     height: 189px;
@@ -54,133 +64,159 @@ background: linear-gradient(to right, #ACB6E5, #74ebd5);
     display: inline-block;
     background-color: inherit;
 }
-/* Zoom on Hover*/
+
+/* Zoom effect on button hover */
 .btn:hover {
     transform: scale(1.5);
 }
+
+/* Cursor styling for buttons */
 .btn {
-    cursor: -webkit-grab; cursor: grab;
+    cursor: -webkit-grab;
+    cursor: grab;
 }
 
-.rules button{
+/* Styling for rules buttons */
+.rules button {
     margin-left: 1%;
     margin-bottom: 1%;
     font-size: inherit;
     border: none;
-    background: inherit; 
+    background: inherit;
 }
+
+/* Hover effect on rules buttons */
 .rules button:hover {
     background-color: #FFE66D;
 }
+
+/* Cursor styling for rules buttons */
 .rules button {
-    cursor: -webkit-grab; cursor: grab;
+    cursor: -webkit-grab;
+    cursor: grab;
 }
+
+/* Styling for player and computer areas */
 .player-area {
     display: inline-block;
 }
 .computer-area {
     display: inline-block;
 }
+
+/* Media queries for responsive design */
 @media (max-width: 800px) {
     .btn {
-        width: 203px;}
-    }
-    @media (max-width: 730px) {
-        .btn {
-            width: 172px;
-            height: 158px;
-            margin: 1px;
-    }}
-    @media (max-width: 665px){
-
-        .heading {
-            text-align: center;
-            font-size: 2.0rem;
-        }
-        .rules button {
-            font-size: larger;
-        }
-    }
-    @media (max-width: 655px){
-        .game-area {
-            width: 100%;
-        }
-        .btn {
-            width: 159px;
-            height: 138px;
+        width: 203px;
     }
 }
-@media (max-width: 525px){
+
+/* More media queries for smaller screens */
+@media (max-width: 730px) {
+    .btn {
+        width: 172px;
+        height: 158px;
+        margin: 1px;
+    }
+}
+
+@media (max-width: 665px) {
+    .heading {
+        text-align: center;
+        font-size: 2.0rem;
+    }
+    .rules button {
+        font-size: larger;
+    }
+}
+
+/* Even more media queries for smaller screens */
+@media (max-width: 655px) {
+    .game-area {
+        width: 100%;
+    }
+    .btn {
+        width: 159px;
+        height: 138px;
+    }
+}
+
+@media (max-width: 525px) {
     .btn {
         background-color: inherit;
+    }
+    .result-area {
+        padding: 25px;
+    }
 }
-.result-area {
-    padding: 25px 
-}}
-@media (max-width: 375px){
+
+@media (max-width: 375px) {
     .btn {
         width: 97px;
         height: 106px;
         margin: 1px;
+    }
+    .heading {
+        font-size: 1.5em;
+    }
+    /* Duplicate entry? */
+    .heading {
+        font-size: 1.5em;
+    }
+    .rules button {
+        font-size: small;
+        margin-left: 15%;
+        margin-bottom: 9%;
+        margin-top: 20%;
+    }
+    .result-area {
+        font-size: 1rem;
+    }
 }
-.heading {
-    font-size: 1.5em;
-}
-.heading {
-    font-size: 1.5em;
 
-}
-.rules button {
-    font-size: small;
-    margin-left: 15%;
-    margin-bottom: 9%;
-    margin-top: 20%;
-    
-
-}
-.result-area{
-    font-size: 1rem; 
-}
-}
-/* The Modal (background) */
+/* Styling for the modal dialog */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content/Box */
-  .modal-content {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+/* Styling for the modal content */
+.modal-content {
     background-color: #aaaaaa;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; 
+    width: 80%;
     text-align: center;
     font-size: large;
-  }
-  /* The Close Button */
-  .close {
+}
+
+/* Styling for the close button in the modal */
+.close {
     float: right;
     font-size: 28px;
     font-weight: bold;
-  }
-  .modal-list{
+}
+
+/* Styling for the modal list */
+.modal-list {
     text-align: center;
     padding: auto;
-    list-style-type: none; 
-  }
-  .close:hover,
-  .close:focus {
+    list-style-type: none;
+}
+
+/* Hover effect on the close button */
+.close:hover,
+.close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
-  }
- 
+}
