update the reset button settings

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,6 +75,10 @@ body {
     cursor: -webkit-grab;
     cursor: grab;
 }
+/* Hide the reset button */
+#reset-btn {
+    display: none;
+}
 
 /* Styling for rules buttons */
 .rules button {
