--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,10 @@ body {
     font-size: 2.5rem;
 }
 
+.rules {
+    text-align: center;
+}
+
 /* Styling for the game area container */
 .game-area {
     box-sizing: border-box;
